# command-based-text-editor

./: CMakeLists.txt  README.md  stringSLList.h  txtEditor.h
TermProject/: file.txt  main.cpp  stringSLList.cpp  textStack.cpp  textStack.h  txtEditor.cpp
